website/i18n/zh-hant/docusaurus-plugin-content-docs/version-3.6.3/guides/docs/sidebar/index.mdx
---
slug: /sidebar
---

# 側邊欄

建立側邊欄有助於：

- 將多份**相關文件**分組
- 在這些文件頁面中**顯示側邊欄**
- 提供**分頁導覽**功能，包含上一頁/下一頁按鈕

要在 Docusaurus 網站中使用側邊欄：

1. 定義一個側邊欄檔案，匯出包含[側邊欄物件](#sidebar-object)的字典。
2. 將檔案路徑傳遞給 `@docusaurus/plugin-docs` 外掛，或透過 `@docusaurus/preset-classic` 傳遞。

```js title="docusaurus.config.js"
export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        docs: {
          // highlight-next-line
          sidebarPath: './sidebars.js',
        },
      },
    ],
  ],
};
```

:::important[Node.js 運行環境]

側邊欄檔案是在 Node.js 環境中執行的。您無法在其中使用或導入瀏覽器 API、React 或 JSX。

:::

本節概述了文件側邊欄的各種功能。在後續章節中，我們將更系統性地介紹以下概念：

```mdx-code-block
import DocCardList from '@theme/DocCardList';

<DocCardList />
```

## 預設側邊欄 {#default-sidebar}

若未指定 `sidebarPath`，Docusaurus 會根據 `docs` 資料夾的檔案系統結構[自動生成側邊欄](autogenerated.mdx)：

```js title="sidebars.js"
export default {
  mySidebar: [
    {
      type: 'autogenerated',
      dirName: '.', // generate sidebar from the docs folder (or versioned_docs/<version>)
    },
  ],
};
```

您也可以明確地定義自己的側邊欄。

## 側邊欄物件 {#sidebar-object}

側邊欄的核心是一個由分類、文件連結和其他超連結組成的層級結構。

```ts
type Sidebar =
  // Normal syntax
  | SidebarItem[]
  // Shorthand syntax
  | {[categoryLabel: string]: SidebarItem[]};
```

例如：

```js title="sidebars.js"
export default {
  mySidebar: [
    {
      type: 'category',
      label: 'Getting Started',
      items: [
        {
          type: 'doc',
          id: 'doc1',
        },
      ],
    },
    {
      type: 'category',
      label: 'Docusaurus',
      items: [
        {
          type: 'doc',
          id: 'doc2',
        },
        {
          type: 'doc',
          id: 'doc3',
        },
      ],
    },
    {
      type: 'link',
      label: 'Learn more',
      href: 'https://example.com',
    },
  ],
};
```

這是一個側邊欄檔案，匯出名為 `mySidebar` 的側邊欄。它包含三個頂層項目：兩個分類和一個外部連結。每個分類下又包含幾個文件連結。

一個側邊欄檔案可以包含[**多個側邊欄物件**](multiple-sidebars.mdx)，透過物件鍵值來識別。

```ts
type SidebarsFile = {
  [sidebarID: string]: Sidebar;
};
```

## 主題配置 {#theme-configuration}

### 可隱藏的側邊欄 {#hideable-sidebar}

啟用 `themeConfig.docs.sidebar.hideable` 選項後，可以讓整個側邊欄隱藏，讓使用者更能專注於內容。這在中型螢幕裝置（例如平板電腦）上特別有用。

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    // highlight-start
    docs: {
      sidebar: {
        hideable: true,
      },
    },
    // highlight-end
  },
};
```

### 自動折疊側邊欄分類 {#auto-collapse-sidebar-categories}

`themeConfig.docs.sidebar.autoCollapseCategories` 選項會在展開一個分類時，自動折疊其他同層級的分類。這能避免使用者同時開啟過多分類，幫助他們專注於當前選取的區段。

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    // highlight-start
    docs: {
      sidebar: {
        autoCollapseCategories: true,
      },
    },
    // highlight-end
  },
};
```

## 傳遞自訂屬性 {#passing-custom-props}

若要傳遞自訂屬性給側邊欄項目，可在任何項目中加入選用的 `customProps` 物件。這對於透過替換 React 元件來實現網站自訂化非常有用。

```js
{
  type: 'doc',
  id: 'doc1',
  // highlight-start
  customProps: {
    badges: ['new', 'green'],
    featured: true,
  },
  // highlight-end
};
```

## 側邊欄麵包屑導覽 {#sidebar-breadcrumbs}

預設情況下，頁面頂部會根據當前頁面的「側邊欄路徑」顯示麵包屑導覽。

可透過外掛選項停用此功能：

```js title="docusaurus.config.js"
export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        docs: {
          // highlight-next-line
          breadcrumbs: false,
        },
      },
    ],
  ],
};
```

## 複雜側邊欄範例 {#complex-sidebars-example}

以下是來自 Docusaurus 網站的實際範例：

```mdx-code-block
import CodeBlock from '@theme/CodeBlock';

<CodeBlock language="js" title="sidebars.js">
  {require('!!raw-loader!@site/sidebars.ts')
    .default
    .split('\n')
    // remove comments
    .map((line) => !['//','/*','*'].some(commentPattern => line.trim().startsWith(commentPattern)) && line)
    .filter(Boolean)
    .join('\n')}
</CodeBlock>
```